tests/warn/param.jo
param indent: Int

def padding(unit: Int): Int = indent * unit

param alpha: Int
param beta: Int

def foo(n: Int): Int = alpha + beta * n

def test(a: Int): Int =
  with a = 20 in foo 10           // error

def main =
  with indent = true in padding 2 // error

  with foo = 6 in padding 4       // error

  with alpha = 3, beta = 6 in foo 10
